tests/outref/TML006.ref
OCTO> qwerty; select * from names limit 1;
[ERROR] PATH:LINENUM DATE TIME : Unknown table: QWERTY
Error with syntax near (line 1, column 0):

qwerty; select * from names limit 1;
^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: qwerty;
[ INFO] PATH:LINENUM DATE TIME : Parsing done for SQL command [qwerty;]
[ INFO] PATH:LINENUM DATE TIME : Returning failure from run_query
[ INFO] PATH:LINENUM DATE TIME : Parsing done for SQL command [select * from names limit 1;]
[ INFO] PATH:LINENUM DATE TIME : Generating SQL for CURSOR_NUM
[ INFO] PATH:LINENUM DATE TIME : Generating M file [./_ydboctoP*.m] (to execute SQL query)
[ INFO] PATH:LINENUM DATE TIME : print_temporary_table()
0|Zero|Cool
OCTO> [ INFO] PATH:LINENUM DATE TIME : Parsing done for SQL command []

